# aircheck

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
.github/actions/test/: action.yml
.github/workflows/: ci-tests.yml  pr-title.yml
src/aircheck/: checks.py  integrity_check.py  load.py  main.py  utils.py
src/aircheck/core/: checks.py  exceptions.py  load.py  parse.py  utils.py
src/aircheck/core/checks/: check_result.py  dynamic_checks.py  static_checks.py
tests/: conftest.py  test_cli.py  test_integrity_check.py
tests/testdata/: duplicated_dags.py  empty_dags.py  invalid_id_dags.py
tests/testdata/correct_dags/: correct_dags.py
tests/testdata/cycle_dags/: cycle_dags.py
tests/testdata/dangling_tasks/: dangling_tasks.py
